# sctcomp

./: .gitignore  CMakeLists.txt  README.md
EtcLib/: CMakeLists.txt
EtcLib/Etc/: Etc.cpp  Etc.h  EtcImage.cpp  EtcImage.h
EtcLib/EtcCodec/: EtcBlock4x4.cpp
EtcTool/: CMakeLists.txt  EtcFile.cpp  EtcFile.h  EtcFileHeader.cpp  EtcFileHeader.h  EtcSourceImage.cpp  EtcSourceImage.h  EtcTool.cpp
sctcomp/: CMakeLists.txt  EtcFile.cpp  EtcFile.h  EtcFileHeader.cpp  EtcFileHeader.h  EtcSourceImage.h  EtcTool.cpp
